objects/FinServ__FinancialHolding__c.object
<CustomObject>
    <description>A holding within a client&apos;s investment account.</description>
    <fields>
        <fullName>AW_AUMSourceExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The external ID of the Assets Under Management source system</description>
        <externalId>true</externalId>
        <label>AUM Source External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_CurrentValue__c</fullName>
        <description>This field is used to track and store the monetary value associated with a particular financial holding record</description>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Last_Updated_Date_from_Source__c</fullName>
        <description>Date and Time of last update</description>
        <label>Last Updated Date From Source</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_NetContribution__c</fullName>
        <description>This field is used to store the net contribution amount associated with a particular financial holding or investment</description>
        <label>Net Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Product_Code__c</fullName>
        <description>This field is designed to store a specific product code or identifier associated with the financial holding</description>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Product__c</fullName>
        <description>This field is used to capture the name or title of a product associated with a financial holding</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Provider_Code__c</fullName>
        <description>This field is designed to store a code or identifier associated with the provider of a financial holding</description>
        <label>Provider Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Provider__c</fullName>
        <description>This field is designed to store the name or the designation of a provider associated with the financial holding record</description>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SellingPrice__c</fullName>
        <description>This field is designed to store monetary values such as the price at which a financial holding is being sold or transferred</description>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_SharePercentage__c</fullName>
        <description>This field is used to store and track the percentage of share that is attributed to a specific entity or individual within the financial holding record</description>
        <label>Share Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>Select Source System Name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_Source_System_Names</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ValueAsAt__c</fullName>
        <description>This field is used to capture the date time for the current value from Full View.</description>
        <label>Value As At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMN_BenefitAmount__c</fullName>
        <description>Used for integration to populate Benefit Amount from source systems (Compass/Lifestyle).</description>
        <label>Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_BenefitEndDate__c</fullName>
        <description>Used for integration to populate Benefit End Date from source systems (Compass/Lifestyle).</description>
        <label>Benefit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_BenefitStartDate__c</fullName>
        <description>Used for integration to populate Benefit Start Date from source systems (Compass/Lifestyle).</description>
        <label>Benefit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_ConversionOptionIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Conversion Option Indicator from source systems (Compass/Lifestyle).</description>
        <label>Conversion Option Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_ExclusionIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Exclusion Indicator from source systems (Compass/Lifestyle).</description>
        <label>Exclusion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_LoadingIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Loading Indicator from source systems (Compass/Lifestyle).</description>
        <label>Loading Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_WaitingPeriod__c</fullName>
        <description>Used for integration to populate Waiting Period from source systems (Compass/Lifestyle).</description>
        <label>Waiting Period</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__AssetCategoryName__c</fullName>
        <description>Market capitalization and investing style</description>
        <label>Asset Category Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large Growth</fullName>
                </value>
                <value>
                    <fullName>Large Value</fullName>
                </value>
                <value>
                    <fullName>Large Blend</fullName>
                </value>
                <value>
                    <fullName>Small Growth</fullName>
                </value>
                <value>
                    <fullName>Small Value</fullName>
                </value>
                <value>
                    <fullName>Small Blend</fullName>
                </value>
                <value>
                    <fullName>Mid-Cap Growth</fullName>
                </value>
                <value>
                    <fullName>Mid-Cap Value</fullName>
                </value>
                <value>
                    <fullName>Mid-Cap Blend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__AssetCategory__c</fullName>
        <description>Subcategory of asset type.</description>
        <label>Asset Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Equity</fullName>
                </value>
                <value>
                    <fullName>Sector Equity</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
                <value>
                    <fullName>International Equity</fullName>
                </value>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Commodities</fullName>
                </value>
                <value>
                    <fullName>Taxable Bond</fullName>
                </value>
                <value>
                    <fullName>Municipal Bond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__AssetClass__c</fullName>
        <description>Major category of asset type.</description>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Cash Equivalents</fullName>
                </value>
                <value>
                    <fullName>Alternative Investments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Financial Holdings</relationshipLabel>
        <relationshipName>FinancialHoldings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FinServ__GainLoss__c</fullName>
        <description>Change in value since purchase.</description>
        <inlineHelpText>Change in value since purchase.</inlineHelpText>
        <label>Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Financial Holdings</relationshipLabel>
        <relationshipName>HouseholdFinancialHoldings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__LastUpdated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__MarketValue__c</fullName>
        <description>Current market value.</description>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PercentChange__c</fullName>
        <description>Percent change in value since purchase.</description>
        <label>Percent Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IndustriesIndividual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Financial Holdings</relationshipLabel>
        <relationshipName>ClientFinancialHoldings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PurchasePrice__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Securities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Symbol</label>
        <referenceTo>FinServ__Securities__c</referenceTo>
        <relationshipLabel>Securities</relationshipLabel>
        <relationshipName>Securities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Shares__c</fullName>
        <label>Shares</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Symbol__c</fullName>
        <description>Ticker symbol for the securities held. The value is copied from Securities__c and can&apos;t be changed.</description>
        <formula>FinServ__Securities__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_FundClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>equals</operation>
                <value>STANLIB Share Class</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Holdings (Fund Class)</relationshipLabel>
        <relationshipName>Financial_Holdings_Fund_Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>equals</operation>
                <value>STANLIB Fund</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Holdings</relationshipLabel>
        <relationshipName>Financial_Holdings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_ICBLevel1__c</fullName>
        <label>ICB Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_Platform__c</fullName>
        <description>Name of the Linked Investment Service Provider</description>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allan Gray</fullName>
                </value>
                <value>
                    <fullName>Ninety One</fullName>
                </value>
                <value>
                    <fullName>Old Mutual</fullName>
                </value>
                <value>
                    <fullName>Momentum</fullName>
                </value>
                <value>
                    <fullName>Inn8</fullName>
                </value>
                <value>
                    <fullName>Momentum International</fullName>
                </value>
                <value>
                    <fullName>PSG</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_Revenue__c</fullName>
        <description>Revenue excluding Value Added Tax</description>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLC_UniqueKey__c</fullName>
        <description>Unique identifier to define Holding record from STANLIB Kite and Hawk data warehouses.</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_CFMTargetMatches__c</fullName>
        <formula>IF(SLI_CFMTarget__r.OwnerId =  FinServ__PrimaryOwner__r.OwnerId , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFM Target Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLI_CFMTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to related Financial Holding records with Target records that are assigned to individual CFMs</description>
        <label>CFM Target</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SLC_Target__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>CFM Target</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SLC_Target__c</referenceTo>
        <relationshipLabel>Financial Holdings</relationshipLabel>
        <relationshipName>Financial_Holdings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLI_ClosingMarketValueZARLastMonth__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Required to store the previous Month&apos;s &apos;Market Value ZAR&apos; retrieved in the &apos;SLI - Financial Account Holdings&apos; flow, if it exists, to use to calculate the MoM movement of AUM on the Financial Holding.</description>
        <label>Closing Market Value ZAR Last Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLI_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLI_Franchise__c</fullName>
        <formula>TEXT(FinServ__FinancialAccount__r.SLI_Franchise__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Franchise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_InstrumentCode__c</fullName>
        <label>Instrument Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_MarketValueZAR__c</fullName>
        <description>Market value of the asset as reported in South African Rand</description>
        <label>Market Value ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLI_MoMMovementOfAum__c</fullName>
        <description>Calculates the MOM difference in Market Value ZAR between current Financial Holding and the previous month&apos;s Financial Holding if it existed.</description>
        <formula>SLI_MarketValueZAR__c -  SLI_ClosingMarketValueZARLastMonth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MoM Movement of AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLR_AccountNumber__c</fullName>
        <description>Investment Account number of the client</description>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLR_AumNative__c</fullName>
        <description>Assets under management in native currency of the fund</description>
        <label>AUM Native</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_AumZar__c</fullName>
        <description>Assets under management in South African Rands</description>
        <label>AUM (ZAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLR_Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLR_NetflowsExclReinvestmentsNative__c</fullName>
        <description>Client inflows less client outflows excluding reinvestments in native currency of the fund</description>
        <label>Netflows Excl. Reinvestments Native</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_NetflowsExclReinvestmentsZar__c</fullName>
        <description>Client inflows less client outflows excluding reinvestmentsin South African Rands</description>
        <label>Netflows excl. Reinvestments ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLR_NetflowsInclReinvestmentsNative__c</fullName>
        <description>Client inflows less client outflows including reinvestments in native currency of the fund</description>
        <label>Netflows Incl. Reinvestments Native</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_NetflowsinclReinvestmentsZAR__c</fullName>
        <description>Client inflows less client outflows including reinvestments in South African Rands</description>
        <label>Netflows incl. Reinvestments ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLSC_AccountUnits__c</fullName>
        <description>Number of units per fund</description>
        <label>Account Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSC_CededUnits__c</fullName>
        <description>Number of ceded units per fund</description>
        <label>Ceded Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSC_FundAccNumber__c</fullName>
        <label>Fund Acc Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSC_TotalNumberOfUnits__c</fullName>
        <description>Total number of units including availabl and unavailable units</description>
        <label>Total Number of Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSC_UnclearedUnits__c</fullName>
        <description>Number of uncleared units per fund</description>
        <label>Uncleared Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Financial Holding</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__Securities__c</columns>
        <columns>FinServ__MarketValue__c</columns>
        <columns>FinServ__LastUpdated__c</columns>
        <columns>AW_CurrentValue__c</columns>
        <columns>AW_NetContribution__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLI_My_Financial_Holdings</fullName>
        <columns>NAME</columns>
        <columns>FinServ__Securities__c</columns>
        <columns>FinServ__MarketValue__c</columns>
        <columns>FinServ__LastUpdated__c</columns>
        <columns>AW_CurrentValue__c</columns>
        <columns>AW_NetContribution__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Financial Holdings</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Financial Holding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Holdings</pluralLabel>
    <recordTypes>
        <fullName>CMN_LibertyFinancialHolding</fullName>
        <active>true</active>
        <description>Record type to be used for Integration with Compass &amp; Lifestyle.</description>
        <label>Liberty Financial Holding</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLI_FinancialHolding</fullName>
        <active>true</active>
        <description>Financial Holding for STANLIB Institutional Distribution</description>
        <label>STANLIB Institutional Distribution Financial Holding</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLSC_FinancialHolding</fullName>
        <active>true</active>
        <description>Financial Holding for STANLIB End Clients</description>
        <label>STANLIB Manco End Client Financial Holding</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>